incluir as alterações

--- a/pagina.html
+++ b/pagina.html
@@ -11,7 +11,7 @@
     <style>
         ul {
             display: flex;
-            justify-content: space-around;
+            justify-content:space-evenly;
         }
     </style>
 </head>
@@ -20,7 +20,8 @@
     <header>
         <div class="botao">
          <ul>
-            <a href="./home.html" class="button">  
+    
+            <a href="#" class="button">  
             <p><li><button class="btn btn-info">Jogabilidade e personagens</button></li></p>
             <p><li><button class="btn btn-danger">Criar personagem</button></li></p>
             <p><li><button class="btn btn-success">Sobre</button></li></p>
