--- a/portifolio.html
+++ b/portifolio.html
@@ -13,6 +13,8 @@
             <ul>
                 <li><a href="http://127.0.0.1:5500/pagina.html">Inicio</a></li>
                 <li><a href="http://127.0.0.1:5500/index.html">Jogabilidade e personagens</a></li>
+                <br>
+                <li><a href= >Sobre o autor</a></li>
             </ul>
         </nav>        
         <div class="header">
@@ -41,11 +43,16 @@
                 </div>
             </div>
         </div>
-        <h1>Lucimar Barros</h1>
+        <h1>Nome: Lucimar Barros de Oliveira</h1>
         <h2>
             Matricula: 202109086758
          <br>   
             Curso: ADS
+         <br>
+            <p>Me chamo Lucimar Barros,</p>
+            <p>37 anos sou casado 11 anos.</p> 
+            <p>Tenho um filho de 9 anos de idade.</p>
+            <p>Moro em Ceilândia-cidade satélite de Brasília-DF</p>  
         </h2>
         <div class="social-media">
             <a href="https://www.linkedin.com/in/lucimarbarros-485047171/">Linkedin</a>
